--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,8 +7,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="stlye.css">
 </head>
-<body>
+<header>
     <h1>vai ser uma imagem aqui </h1>
+    <ul>
+        <li>Colégio Estadual Castro Aves E.F.M</li>
+        <li>Querência do Norte</li>
+    </ul>
+</header>
     
-</body>
 </html>
+
