--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="stlye.css">
 </head>
 <header>
-    <h1>vai ser uma imagem aqui </h1>
+    
+    <img class="cabeçalho-imagem" src="galaxia.jpg" alt="galaxia">
     <ul>
         <li>Colégio Estadual Castro Aves E.F.M</li>
         <li>Querência do Norte</li>
     </ul>
-</header>
-    
+</header> 
+ <body>
+
 </html>
 
