--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="stlye.css">
 </head>
-<header>
+<body>
+<header class="cabeçalho">
     
     <img class="cabeçalho-imagem" src="galaxia.jpg" alt="galaxia">
-    <ul>
-        <li>Colégio Estadual Castro Aves E.F.M</li>
-        <li>Querência do Norte</li>
+    <ul class="cabeçalho-lista">
+        <li class="cabeçalho-lista-item"> Estadual Castro Aves E.F.M</li>
+        <li class="cabeçalho-lista-item">Querência do Norte</li>
     </ul>
 </header> 
  <body>
 
 </html>
+
+
 
