--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,9 +16,15 @@
         <li class="cabeçalho-lista-item">Querência do Norte</li>
     </ul>
 </header> 
+<section  class="escola"> 
+   <div class="escola-div-conteudo">
+    <h2 class="escola-titulo">Sobre a Escola</h2>
+      <p class="escola-texto-um">A escola Estadual Castro Alves está localizada na</p>
+      <p>Telefone: (44) 3462-2030 Email: qnecastroalves@seed.pr.gov.br</p>
+       <p class="escola-texto-dois">A escola atende alunos do fundamental, medio e E</p>
+   </div>
+
+</section>
  <body>
 
 </html>
-
-
-
