--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documet</title>
     <link rel="stylesheet" href="stlye.css">
 </head>
 <body>
@@ -16,12 +16,13 @@
         <li class="cabeçalho-lista-item">Querência do Norte</li>
     </ul>
 </header> 
-<section  class="escola"> 
-   <div class="escola-div-conteudo">
+
+<section  class="galaxia"> 
+   <div class="galaxia">
     <h2 class="escola-titulo">Sobre a Escola</h2>
-      <p class="escola-texto-um">A escola Estadual Castro Alves está localizada na</p>
-      <p>Telefone: (44) 3462-2030 Email: qnecastroalves@seed.pr.gov.br</p>
-       <p class="escola-texto-dois">A escola atende alunos do fundamental, medio e E</p>
+      <p class="galaxia">E um tipo de fonte que vc olha e imagina</p>
+      <p>Telefone: (44) 3462-2030 Email: luana.eugenia.oliveira@ecoscola.pr.gov.br</p>
+       <p class="galaxia">A escola atende alunos do fundamental, medio e E</p>
    </div>
 
 </section>
